# Character-Info-TUI

./: Cargo.toml
characters/: miles_merino.json  nero_kanzaki.json
src/: app.rs  handler.rs  main.rs  ui.rs
