[package]
name = "test"
version = "0.1.0"
authors = ["Vaspera <110002885+Vazpera@users.noreply.github.com>"]
license = "MIT"
edition = "2021"

[dependencies]
serde = {version= "1.0.209", features= ["derive"]}
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
ratatui = "0.27.0"
serde_json = "1.0.127"
tokio = { version = "1.35.1", features = ["full"] }
